Fix UI, added contrast in the palette

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@
   font-family: "Playfair Display", sans-serif;
   display: flex;
   flex-direction: column;
-  font-size: 1em;
+  width: 100%;
 }
