--- a/src/Styles/aboutme.css
+++ b/src/Styles/aboutme.css
@@ -1,8 +1,8 @@
 .about-me {
-	color:#E88D8D;
-	font-size: .5em;
+	color:#e45250;
+	font-size: 1em;
 	text-align: center;
-	width: 50%;
+	width: 70%;
 	margin: 4em auto;
 	line-height: 2em;
 }
