--- a/src/Styles/banner.css
+++ b/src/Styles/banner.css
@@ -17,9 +17,9 @@
 
 .banner a {
 	text-decoration: none;
-	color: #E88D8D;
+	color: #E45250;
 	font-weight: 400;
-	font-size: 1em;
+	font-size: 1.2em;
 	line-height: 2em;
 }
 
