--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -4,11 +4,12 @@
 }
 .home {
 	padding: .7em;
-	color: #8C8C8C;
 }
 
 .greetings {
-	font-size: 3em;
+	margin-top: .4em;
+	color: #434044;
+	font-size: 4em;
 	font-weight: 500;
 }
 
@@ -33,6 +34,7 @@
 }
 
 .home-links a {
+	line-height: 1.5;
 	color: #8C8C8C;
 }
 
@@ -41,6 +43,9 @@
 	flex-direction: column;
 	justify-content: flex-end;
 	align-items: flex-end;
+	color: #e45250;
+	font-size: 1.5em;
+	line-height: 1;
 }
 
 @media screen and (min-width:768px) {
